[gd_scene load_steps=3 format=2]

[ext_resource path="res://Test/sound_icon.png" type="Texture" id=1]
[ext_resource path="res://Test/TestSoundPlayer.gd" type="Script" id=2]

[node name="TestSoundPlayer" type="Node2D"]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
modulate = Color( 0, 0, 0, 0.00392157 )
margin_left = -67.0
margin_top = -55.0
margin_right = 69.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 8.5, -46.2, 8.5, -44.3, 11.5, -41.3, 11.5, 42.3, 4.3, 49.5, 0.799999, 49.5, -28.2, 24.5, -55.3, 24.5, -59.5, 20.3, -59.5, 17.5, -60.5, -18.5, -58.5, -18.5, -54.5, -23.5, -28.5, -23.5, -1.5, -45.5, -1.5, -47.9 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 48.5, -40.6, 48.5, -38.1, 56.5, -26.1, 56.5, -22.9, 60.5, -11.9, 60.5, -3.5, 61.5, 5.7, 61.5, 7.5, 60.2, 7.5, 56.2, 29.5, 54.7, 29.5, 47.7, 43.5, 46.5, 43.5, 42.5, 48.5, 35.7, 48.5, 30.5, 43.3, 30.5, 36.9, 40.5, 21.9, 40.5, 19.1, 43.5, 11.1, 43.5, -9.5, 41, -18.5, 40.3, -18.5, 30.5, -36, 30.5, -42.6, 35.5, -45.6, 35.5, -46.7, 37.6, -47.8 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 32.5, -34.2, 42.5, -21.2, 42.5, -17.8, 46.9, 8.5, 45.2, 8.5, 43.2, 21.5, 41.8, 21.5, 35.8, 34.5, 34, 34.5, 24.5, 39.9, 24.5, 36.5, 19.5, 32.5, 19.5, 26.9, 26.5, 17, 26.5, 14.2, 29.5, 3.5, 29.5, -1.1, 26.8, -13.5, 19.5, -26, 19.5, -31.5, 23.5, -34.5, 23.5, -36.5, 32.5, -36.5 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 25.5, -19.6, 25.5, -17.2, 28.5, -13.2, 28.5, -9.5, 30.8, 8.5, 29.2, 8.5, 27.1, 18.5, 25.6, 18.5, 20.6, 26.5, 13.7, 26.5, 8.5, 21.3, 8.5, 15.2, 12.9, -0.5, 8, -21.5, 10.8, -21.5, 13.5, -23.5, 13.5, -24.7, 15.6, -25.8 )
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
